crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__invoices__tests__invoice_stripe_fields.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/invoices.rs
assertion_line: 454
expression: response
---
{
  "data": {
    "tenant": {
      "billing": {
        "invoices": {
          "edges": [
            {
              "node": {
                "amountDue": 2600,
                "hostedInvoiceUrl": "https://example.test/hosted",
                "invoicePdf": "https://example.test/invoice.pdf",
                "paymentDetails": {
                  "card": {
                    "brand": "visa",
                    "expMonth": 12,
                    "expYear": 2025,
                    "last4": "4242"
                  },
                  "usBankAccount": null
                },
                "receiptUrl": "https://example.test/receipt",
                "status": "paid"
              }
            }
          ]
        }
      }
    }
  }
}
