crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__invoices__tests__pagination_second_page.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/invoices.rs
expression: invoices_page(&second_page)
---
{
  "edges": [
    {
      "cursor": "2024-02-29;2024-02-01;final",
      "node": {
        "dateEnd": "2024-02-29",
        "dateStart": "2024-02-01",
        "invoiceType": "FINAL"
      }
    }
  ],
  "pageInfo": {
    "endCursor": "2024-02-29;2024-02-01;final",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "2024-02-29;2024-02-01;final"
  }
}
