crates/control-plane-api/src/server/public/graphql/billing/snapshots/control_plane_api__server__public__graphql__billing__invoices__tests__tie_break_previous_page.snap
---
source: crates/control-plane-api/src/server/public/graphql/billing/invoices.rs
expression: invoices_page(&previous_page)
---
{
  "edges": [
    {
      "cursor": "2024-03-31;2024-03-01;final",
      "node": {
        "dateEnd": "2024-03-31",
        "dateStart": "2024-03-01",
        "invoiceType": "FINAL"
      }
    }
  ],
  "pageInfo": {
    "endCursor": "2024-03-31;2024-03-01;final",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "2024-03-31;2024-03-01;final"
  }
}
